--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,11 @@
 title: Andy Pottebaum
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
+description: > # your text below (remove <br> elements if you don't need line breaks)
+  First description 
+  <br><br>
+  Second description 
+  <br><br>
+  <a href="https://www.linkedin.com/in/andy-pottebaum/">View My LinkedIn Profile</a> 
+  
 theme: jekyll-theme-minimal
+
